# HeppOS

./: .gitignore  CODINGSTYLE.md  GNUmakefile  GNUmakefile.old  Makefile.am  README.md  bochsrc  configure.ac  gdb_qemu.sh  makefile  qemu.sh  qemu_debug.sh  qemu_uefi.sh  qemu_uefi_debug.sh
iso/boot/grub/: grub.cfg
kernel/: GNUmakefile  Makefile.am  boot.S  boot.s  configure.ac  crti.s  crtn.s  limine.conf  linker.ld  main.c  main.cpp  makefile  memcmp.c  memmove.c  memset.c  multiboot2.hpp  pmm.cpp  pmm.hpp  retvals.h  retvals.hpp
kernel/src/: boot.S  console.cpp  crti.S  crtn.S  cstub.c  cstub.cpp  cstub.h  fini.cpp  gdt.cpp  gdt.h  init.cpp  kstring.cpp  kstring.h  ktype.cpp  ktype.h  liminestub.cpp  liminestub.h  log.cpp  log.h  main.cpp  paging.cpp  paging.h  retval.cpp  retval.h  retvals.h  serial.cpp  serial.h  stdfont.c
kernel/src/cpu/: cpuid.h  gdt.cpp  gdt.h  idt.cpp  idt.h  idt_stub.S  interrupt.cpp  interrupt.h  io.h  isr_stub.S  mmio.h  msr.h  pic.cpp  pic.h
kernel/src/kstdlib/: ktype.h
kernel/src/memory/: paging.cpp  paging.h  pmm.cpp  pmm.h
kernel/src/video/: .stdfont.cpp.swp  console.cpp  console.h  stdfont.c  stdfont.cpp
kloader/: boot.s  check-multiboot2.sh  console.cpp  console.hpp  console15.cpp  console15.hpp  console16.cpp  console16.hpp  console24.cpp  console24.hpp  console32.cpp  console32.hpp  console8.cpp  console8.hpp  cpuid.hpp  crti.s  crtn.s  cstub.c  cstub.h  font.s  gdt.cpp  gdt.hpp  linker.ld  main.cpp  makefile  memcmp.c  memcpy.c  memmove.c  memset.c  multiboot2.cpp  multiboot2.hpp  multiboot2_defines.s  paging.cpp  paging.hpp  pmm.cpp  pmm.hpp  retvals.hpp  stdfont.s  stdfont_old.s  strlen.c  (+2 more)
